2005-09-25 20:04 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (leading_edge_spacing) extracted the spacing
	function to apply it often (every STATUS).

2005-09-15 10:20 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) refactored the path (currently
	disabled) that uses a plan to make a final sweep after adaptation
	that splits interior grid edges that have both nodes on a boundary
	element. This procedure leads to provable boundary projection.

2005-09-14 13:35 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) added a block of code to split edges that
	connect two boundary nodes without being on the boundary. These
	problem edges prevent untangleing from working.

2005-09-13 23:03 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridMinGridFaceAreaUV) added to report
	the minimum face area in uv of the grid.
	* src/unit_main.c (main) refactored the untangling to do surface
	UV area first and volume second.

2005-09-13 19:35 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMinSurfaceSmoothCost,gridSetMinSurfaceSmoothCost)
	to expose the minimum (volume) cost allowed durring surface smoothing.
	* src/gridcad.c (gridSmoothNode,gridLinearProgramUV) uses the
	gridMinSurfaceSmoothCost function to obtain min cost instead
	of gridOPTIM_COST_FLOOR #define.
	* src/unit_main.c (main) try gridSetMinInsertCost and 
	gridSetMinSurfaceSmoothCost of 0.1.

2005-09-13 15:45 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) cleaned up main to only do the standard form
	of adaptation to evaluate different techniques more rigorously.

2005-09-13 15:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdapt) to standardize the adaptation
	techniques, use a prioritized list (plan) to decide which edges
	to split or collpase.

2005-09-11 21:05 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridNumberOfInvalidCells) count cells with
	aspect ratio less than zero.